--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,19 @@ __pycache__/NCCR_Pred.cpython-38.pyc
 *.pyc
 .idea/workspace.xml
 .idea/workspace.xml
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/.DS_Store
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/EmoLex-Ethics-Data-Statement.pdf
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/NRC-Emotion-Lexicon-Senselevel-v0.92.txt
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/NRC-Emotion-Lexicon-Wordlevel-v0.92.txt
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/NRC-Emotion-Lexicon-v0.92-In105Languages-Nov2017Translations.xlsx
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC - Sentiment Lexicon - Research EULA Sept 2017 .pdf
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/Older Versions/readme.txt
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/Paper1_NRC_Emotion_Lexicon.pdf
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/readme.txt
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/Paper2_NRC_Emotion_Lexicon.pdf
+Data/SentiWS_v2.0/SentiWS.txt
+Data/SentiWS_v2.0/SentiWS_v2.0_Negative.txt
+Data/SentiWS_v2.0/SentiWS_v2.0_Positive.txt
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/Older Versions/NRC-Emotion-Lexicon-v0.92-InManyLanguages.xlsx
+Data/NCCR_Content.zip
+Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/README.txt
