--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon-v0.92/Older Ver
 Data/NCCR_Content.zip
 Data/NRC-Emotion-Lexicon/NRC-Emotion-Lexicon/README.txt
 *.xml
+*.xml~
+*.xml
